# odoo

./: .cursorignore  .dockerignore  .editorconfig  .env.dev  .env.example  .env.prod  .env.smtp.example  .env.stage  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .mcp.json  .pre-commit-config.yaml  .python-version  AGENTS.md  AUDIT_FIXES_APPLIED.md  AUTO_REVIEW_AND_FIX_SUMMARY.md  CHANGELOG.md  CI_CD_AUTOMATION_SUMMARY.md  CI_CD_TROUBLESHOOTING_GUIDE.md  CI_MINIMAL_SET.md  CLAUDE.md  CLAUDE_CODE_WEB.md  CLAUDE_NEW.md  CLAUDE_SECRET_POLICY.md  COMPREHENSIVE_DEPLOYMENT_SUMMARY.md  CONTRIBUTING.md  CREDENTIALS_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_MVP.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_REPORT_FINAL.md  DEPLOYMENT_RUNBOOK.md  DEPLOYMENT_STATE_CURRENT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_VALIDATION_REPORT.md  DEPLOYMENT_WORKFLOW.md  DEPLOY_ENTERPRISE_BRIDGE_FIX.md  DEPLOY_NOW.md  (+115 more)
agent-platform/: .env.example  .gitignore  Dockerfile.gateway  README.md  azure-pipelines-contract-checks.yml  azure-pipelines-eval-gate.yml  azure-pipelines-pr.yml  azure-pipelines.yml  conftest.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
agent-platform/agents/release-manager/: Dockerfile  agent_orchestrator.py  odoo_health_agent.py  requirements.txt
agent-platform/agents/release-manager/static/: release_manager_ipai_config.yaml
agent-platform/apps/builder-factory/: package.json  tsconfig.json
agent-platform/apps/builder-factory/src/: index.ts  server.ts
agent-platform/configs/dev/: runtime.yaml
agent-platform/configs/staging/: runtime.yaml
agent-platform/contracts/envelopes/: agent_request.yaml  agent_result.yaml
agent-platform/contracts/handoffs/: handoff.yaml
agent-platform/contracts/spec/observability/: README.md
agent-platform/contracts/spec/orchestration/: README.md
agent-platform/docs/architecture/: AGENT_PLATFORM_PRODUCTION_PLAN.md  AZURE_DEVOPS_MCP_DECISION.md  BUILDER_FACTORY_RUNTIME.md  DEVUI_LOCAL_DEVELOPER_EXPERIENCE.md  FOUNDATION_BLOCKERS_AND_MOCKS.md  FOUNDRY_INTEGRATION.md  FOUNDRY_RUNTIME_ALIGNMENT.md  MODEL_PROVIDER_ADAPTERS.md
agent-platform/docs/evidence/foundry-integration-test/: README.md
agent-platform/docs/foundry/: sdk-2x-migration.md
agent-platform/docs/headless/: README.md
agent-platform/docs/learning/: AGENT_GUIDED_LEARNING_PATHS.md  BUILDER_SURFACES.md
agent-platform/memory/agents/ops-agent/: README.md
agent-platform/memory/agents/research-agent/: README.md
agent-platform/memory/domain/finance/: README.md
agent-platform/memory/learned/: MEMORY.md  domain-corrections.md  fallback-patterns.md  routing-patterns.md  user-preference-patterns.md
agent-platform/orchestration/supervisor/: server.py
agent-platform/orchestration/workers/: doc_intel.py  scrum_master.py
agent-platform/policy/: behavior-matrix.yaml  domain-packs.yaml
agent-platform/runtimes/checkpointing/: README.md  index.ts
agent-platform/runtimes/executor/: README.md
agent-platform/runtimes/gateways/: README.md  index.ts
agent-platform/runtimes/orchestrator/: index.ts
agent-platform/scripts/: build-gateway.sh  deploy-m365-bot-proxy.sh
agent-platform/services/eval-runner/: README.md  index.ts
agent-platform/services/runtime-api/: README.md  index.ts
agent-platform/services/telemetry-bridge/: README.md
agent-platform/services/worker-manager/: README.md
agent-platform/spec/agent-platform-runtime/: constitution.md  plan.md  prd.md  tasks.md
agent-platform/spec/runtime/: README.md
agent-platform/src/agent_platform/: __init__.py  config.py  logging.py  main.py  settings.py
agent-platform/src/policy/: resolveBehavior.ts  types.ts
agent-platform/ssot/eval/: gates.yaml  scenarios.yaml  score_thresholds.yaml
agent-platform/ssot/learning/: agent_sdk_stack_map.yaml  azure_copilot_agent_skill_map.yaml  azure_sample_azd_skill_map.yaml  databricks_architecture_card_map.yaml  databricks_production_ready_skill_map.yaml  foundry_model_tool_runtime_map.yaml  hf_training_skill_map.yaml  microsoft_caf_skill_map.yaml  microsoft_certification_persona_map.yaml  odoo_developer_skill_map.yaml  platform_cli_skill_map.yaml
agent-platform/ssot/policies/: safety-policy.yaml
agent-platform/ssot/pulser/: behavior-profiles.yaml
agent-platform/ssot/routing/: agent-routing.yaml
agent-platform/ssot/runtime/: agents.yaml  deployment_readiness.yaml  environments.yaml  models.yaml  precursor_runtime_contract.yaml  runtime-boundary.yaml  services.yaml  tools.yaml
agent-platform/ssot/security/: allowed_tools.yaml  auth_policy.yaml  role_bindings.yaml
agent-platform/tests/contract/: test_configs.py  test_runtime_boundary.py  test_ssot_contracts.py
agent-platform/tests/e2e/: test_invoice_live_foundry.py
agent-platform/tests/smoke/: conftest.py  test_document_intelligence_smoke.py  test_foundry_project_client_smoke.py  test_health.py
agent-platform/tests/unit/: test_runtime_smoke.py
agents/finance-copilot/: .env.example  README.md  agent.py  devui_config.yaml  pyproject.toml  tools.py
agents/finance-copilot/tests/: test_tools.py
databricks/bundles/foundation_python/: databricks.yml  pyproject.toml
databricks/bundles/lakeflow_ingestion/: databricks.yml  pyproject.toml
infra/databricks/: .coverage  README.md  databricks.yml  pyproject.toml
infra/databricks/config/: dev.yaml  prod.yaml  staging.yaml
infra/databricks/resources/: jobs.yml  schemas.yml
infra/databricks/scripts/: bundle-deploy.sh  deploy-connectors.sh  fmt.sh  validate_runtime_env.py
infra/databricks/sql/: bronze.sql  gold.sql  grants.sql  schemas.sql  silver.sql
infra/databricks/ssot/: certification-ownership.yaml  cron-schedule.yaml  release-lanes.yaml  release-registry.yaml
infra/databricks/tests/: __init__.py  conftest.py
infra/databricks/training/: competencies.yaml
platform/services/docflow/: README.md  pyproject.toml
services/notion-sync/: pyproject.toml
services/notion-sync/notion_sync/: config.py  models.py
services/notion-sync/tests/: conftest.py
services/pm_api/: pyproject.toml
(+19044 files in other folders)
